# DB-final

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  cafe.cpp  docker-compose.yaml  gen_data.ipynb  import_cafe_db.cpp  import_cafe_to_db  import_cafe_to_db.cpp  ini.h  read_csv_instant.cpp  scoring_function_example.cpp  update_database.ipynb
backend/: build_rtree.sh  requirements.txt  search_result.json  server.py  setup.sh
backend/MYsqlDB/: Scoring.h  init.sql  test  test.cpp
backend/RTreeDB/: CMakeLists.txt  bindings.cpp  cafe.cpp
backend/RTreeDB/RTree/: RTree.h  RTreeEngine.h
backend/app/: cafe  cafe.cpp  cafes.csv  rtree_test  server.py  test.cpp
backend/app/RTree/: RTree.h
backend/app/frames/: frame_0.json  frame_1.json  frame_10.json  frame_11.json  frame_12.json  frame_13.json  frame_14.json  frame_15.json  frame_16.json  frame_17.json  frame_18.json  frame_19.json  frame_2.json  frame_20.json  frame_21.json  frame_22.json  frame_23.json  frame_24.json  frame_25.json  frame_26.json  frame_27.json  frame_28.json  frame_29.json  frame_3.json  frame_30.json  frame_31.json  frame_32.json  frame_33.json  frame_34.json  frame_35.json  frame_36.json  frame_37.json  frame_38.json  frame_39.json  frame_4.json  frame_40.json  frame_41.json  frame_42.json  frame_43.json  frame_44.json  (+9 more)
backend/app/frames/insert/: frame_11.json  frame_12.json  frame_13.json  frame_14.json  frame_15.json  frame_19.json  frame_2.json  frame_22.json  frame_23.json  frame_6.json  (+31 more)
backend/csvs/: cafes_100.csv  cafes_1000.csv  cafes_10000.csv
backend/frames/insert/: frame_0.json  frame_1.json  frame_10.json  frame_16.json  frame_17.json  frame_18.json  frame_20.json  frame_21.json  frame_26.json  frame_27.json  frame_28.json  frame_29.json  frame_3.json  frame_32.json  frame_35.json  frame_36.json  frame_37.json  frame_38.json  frame_4.json  frame_40.json  frame_41.json  frame_43.json  frame_44.json  frame_46.json  frame_47.json  frame_48.json  frame_49.json  frame_5.json  frame_51.json  frame_52.json  frame_53.json  frame_54.json  frame_55.json  frame_57.json  frame_58.json  frame_60.json  frame_61.json  frame_65.json  frame_66.json  frame_67.json  (+19 more)
backend/frames/search/: frame_00.json  frame_1.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: SpatialView.jsx  TreeVisualization.jsx
frontend/src/pages/: DemoRealTime.jsx  DemoRtree.jsx  Home.jsx
(+3 files in other folders)
